--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 						<h1><a href="index.html">Future Imperfect</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="#">hOME</a></li>
+								<li><a href="#">ABOUT</a></li>
+								<li><a href="#">CV</a></li>
+								<li><a href="#">github</a></li>
+								<li><a href="#">Gould Center</a></li>
+								<li><a href="#">UNSSE PROFILE</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -501,8 +502,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="intro">
 								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
 								<header>
-									<h2>Future Imperfect</h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+									<h2>Billy Southern</h2>
+									<p>Welcome! My name is Billy and this is my website. Click the side bar on the left to check out a few of my recent GIS projects !<br>
+									</p>
 								</header>
 							</section>
 
