--- a/FPL.html
+++ b/FPL.html
@@ -130,7 +130,7 @@
         </span>
         </div>												
 
-<p>Using the ggstatsplot package, I’ve generated a violin plot of the points scored throughout the season. This chart is useful for identifying the clustering of scores, such as JF at around 45 points, and also the median for each team. In this case, n denotes the number of game weeks in a Premier League and Fantasy season, and I enabled the outlier tagging to show when each team hit their single highest total.  
+<p>Using the ggstatsplot package, I’ve generated a violin plot of the points scored throughout the season. This chart is useful for identifying the clustering of scores, such as JF at around 45 points, and also the median for each team. In this case,<em> n </em>denotes the number of game weeks in a Premier League and Fantasy season, and I enabled the outlier tagging to show when each team hit their single highest total.  
 
  </p>
 <div style="max-width: 600px; margin: 0 auto;">
@@ -142,7 +142,7 @@
 		<div style="max-width: 550px; margin: 0 auto;">
         <span class="image featured">
 		<img src="images/FPL/Dumbbell.png" alt="" style="width: 100%;"> 
-			<img src="images/fpl/bEESWARM.PNG" alt="" style="width: 100%;"> </span>
+			<img src="images/fpl/Beeswarm.png" alt="" style="width: 100%;"> </span>
         </div>
 								<footer>
 								</footer>
