--- a/Population/Population.html
+++ b/Population/Population.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Population patterns
+	Billy Southern
 -->
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>Population patterns in US cities</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +18,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<h1><a href="https://billysouthern.github.io"><strong>Billy Southern</strong> Population patterns in us cities</a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li><a href="https://billysouthern.github.io" >HOME</a></li>
+								<li><a href="https://billysouthern.github.io/about.html" >about</a></li>
+								<li><a href="https://docs.google.com/document/d/10JHdsV16wSlpNhjEA4Qc-L1FHJldC6x_vOjqsaIhLbQ/edit" >cv</a></li>
+								<li><a href="https://billysouthern.github.io" >github</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -55,39 +57,84 @@
 							<p>Cook County, IL</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/Cleveland.png" class="image"><img src="images/thumbs/Cleveland.png" alt="" /></a>
+							<h2>Cleveland</h2>
+							<p>Cuyahoga County, OH</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/CVille.png" class="image"><img src="images/thumbs/CVille.png" alt="" /></a>
+							<h2>Charlottesville, VA</h2>
+							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/DC.png" class="image"><img src="images/thumbs/DC.png" alt="" /></a>
+							<h2>Washington DC</h2>
+							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/Detroit.png" class="image"><img src="images/thumbs/Detroit.png" alt="" /></a>
+							<h2>Detroit</h2>
+							<p>Wayne County, MI</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/MiamiDade.png" class="image"><img src="images/thumbs/MiamiDade.png" alt="" /></a>
+							<h2>Miami</h2>
+							<p>Miami-Dade County, FL</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/NOLA.png" class="image"><img src="images/thumbs/NOLA.png" alt="" /></a>
+							<h2>New Orleans</h2>
+							<p>Orleans Parish, LA</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/Philly.png" class="image"><img src="images/thumbs/Philly.png" alt="" /></a>
+							<h2>Philadelphia</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Phoenix.png" class="image"><img src="images/thumbs/Phoenix.png" alt="" /></a>
+							<h2>Phoenix</h2>
+							<p>Maricopa County, AZ</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Pittsburgh.png" class="image"><img src="images/thumbs/Pittsburgh.png" alt="" /></a>
+							<h2>Pittsburgh</h2>
+							<p>Allegheny County, PA</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Portland.png" class="image"><img src="images/thumbs/Portland.png" alt="" /></a>
+							<h2>Portland</h2>
+							<p>Multnomah County, OR</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Richmond.png" class="image"><img src="images/thumbs/Richmond.png" alt="" /></a>
+							<h2>Richmond</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Seattle.png" class="image"><img src="images/thumbs/Seattle.png" alt="" /></a>
+							<h2>Seattle</h2>
+							<p>King County, WA</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/StLouis.png" class="image"><img src="images/thumbs/StLouis.png" alt="" /></a>
+							<h2>St. Louis</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Tampa.png" class="image"><img src="images/thumbs/Tampa.png" alt="" /></a>
+							<h2>Tampa</h2>
+							<p>Hillsborough County, FL</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Tulsa.png" class="image"><img src="images/thumbs/Tulsa.png" alt="" /></a>
+							<h2>Tulsa</h2>
+							<p>Tulsa County, OK</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Vegas.png" class="image"><img src="images/thumbs/Vegas.png" alt="" /></a>
+							<h2>Las Vegas</h2>
+							<p>Clark County, NV</p>
 						</article>
 					</div>
 
@@ -99,47 +146,12 @@
 									<h2>Magna feugiat sed adipiscing</h2>
 									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
 								</section>
-								<section>
-									<h2>Follow me on ...</h2>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									</ul>
-								</section>
+
 								<p class="copyright">
 									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
 								</p>
 							</div>
-							<div>
-								<section>
-									<h2>Get in touch</h2>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<input type="text" name="name" id="name" placeholder="Name" />
-											</div>
-											<div class="field half">
-												<input type="text" name="email" id="email" placeholder="Email" />
-											</div>
-											<div class="field">
-												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-							</div>
-						</div>
-					</footer>
-
-			</div>
+		
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
