--- a/about.html
+++ b/about.html
@@ -111,14 +111,16 @@
 									  </p>
                                     </div>
 								</header>
-								<p>I’m based in State College where I’m currently a Ph.D. Candidate in the Geography program at&nbsp; Pennsylvania State University. I situate myself as an urban geographer, and my research interests involve thinking about sociospatial inequalities, neighborhood and community level processes, and how spatial boundaries shape our understandings of place. </p>
+								<p>I’m based in State College where I’m currently a Ph.D. Candidate in the Geography program at&nbsp; Pennsylvania State University. I situate myself as an urban geographer, and my research interests involve thinking about economic segregation and sociospatial inequalities, the geographical concentration of poverty and affluence, and broadly how we make and remake our cities. </p>
 <div style="max-width: 500px; margin: 0 auto;">
         <span class="image featured">
           <img src="images/About/Bill.jpg" alt="" style="width: 100%;" />
         </span>
         </div>
-							  <p>As an urban geographer, I’m interested in the  processes that make and remake our cities and urban spaces, and I'm keen on further exploring the social and economic dynamics of this. More recently, my work focuses on the suburban realm to explore how clearer definitions can support quantitative and empirical research into this environment. &nbsp;</p>
-							  <p>Prior to my time at PSU, I completed my Master’s Degree in Town and Regional Planning at the University of Liverpool. As a student here, my research involved my other long-standing interests of urban mobility and transportation, and I organized my thesis around the accessibility and mobility of Liverpool’s Merseyrail network. At undergraduate level, I studied geography at Manchester Metropolitan University. </p>
+							  <p> As an urban geographer, my research explores the geographical distribution of poverty and affluence throughout the urban realm to ask how have trends in economic segregation shifted in recent years. I'm also interested in asking how cities and their suburbs are planned to spatialize outcomes of advantage and disadvantage, and how the social and political mechanisms of local policy have shaped the wider social context. Methodologically, I look to use data-driven methods to illustrate trends and outcomes in urban and applied geography.    
+
+								
+<p>Prior to my time at PSU, I completed my Master’s Degree in Town and Regional Planning at the University of Liverpool. As a student here, my research involved my other long-standing interests of urban mobility and transportation, and I organized my thesis around the accessibility and mobility of Liverpool’s Merseyrail network. At undergraduate level, I studied geography at Manchester Metropolitan University. </p>
 <p>Contact: <br>
   <a href="mailto:bms6723@psu.edu">bms6724@psu.edu</a> <br> 
 		  317 Walker Building <br> 
