--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 							  <header>
 							    <div class="title">
 							      <h2><a href="single.html">Welcome!</a></h2>
-									  <p>MY NAME IS BILLY AND THIS IS MY SITE. CHECK OUT THE LINKS ON THE LEFT TO see some of my recent GIS and data work.</p>
+									  <p>MY NAME IS BILLY AND THIS IS MY SITE. CHECK OUT THE LINKS ON THE LEFT TO see some of my recent GIS work, and see those above to learn more about me.</p>
 								</div>
 </header>
 								<a href="single.html" class="image featured"><img src="images/Thumbnails/Paris.jpeg" alt="" /></a>
-							  <p>I'm currently a Ph.D. student in the Geography program at Pennsylvania State University.  I'm in my third year and much of my work thinks about poverty, affluence, and how we make our cities. To see more of my work and interests, check out the links throughout the homepage.  &nbsp; &nbsp;</p>
+							  <p>I'm currently a Ph.D. student in the Geography program at Pennsylvania State University.  I'm in my third year and much of my work thinks about the geographical concentration of economic segregation. To see more of my research and data-related work, check out the links throughout the website.  &nbsp; &nbsp;</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="about.html" class="button large">About me</a></li>
