--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
           <img src="images/About/Bill.jpg" alt="" style="width: 100%;" />
         </span>
         </div>
-							  <p> As an urban geographer, my research explores the geographical distribution of poverty and affluence throughout the urban realm to ask how have trends in economic segregation shifted in recent years. I'm also interested in asking how cities and their suburbs are planned to spatialize outcomes of advantage and disadvantage, and how the social and political mechanisms of local policy have shaped the wider social context. Methodologically, I look to use data-driven methods to illustrate trends and outcomes in urban and applied geography.    
+							  <p> As an urban geographer, much of my work examines the geographical distribution of poverty and affluence throughout the urban realm to ask how have trends in economic segregation shifted in recent years. I'm also interested in asking how cities and their suburbs are planned to spatialize outcomes of advantage and disadvantage, and how the social and political mechanisms of local policy have shaped the wider social context. Methodologically, I look to use data-driven methods to illustrate trends and outcomes in urban and applied geography.    
 
 								
 <p>Prior to my time at PSU, I completed my Master’s Degree in Town and Regional Planning at the University of Liverpool. As a student here, my research involved my other long-standing interests of urban mobility and transportation, and I organized my thesis around the accessibility and mobility of Liverpool’s Merseyrail network. At undergraduate level, I studied geography at Manchester Metropolitan University. </p>
