--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 								</div>
 </header>
 								<a href="single.html" class="image featured"><img src="images/Thumbnails/Paris.jpeg" alt="" /></a>
-							  <p>I'm currently a Ph.D. student in the Geography program at Pennsylvania State University.  I'm in my third year and much of my work thinks about the geographical concentration of economic segregation. To see more of my research and data-related work, check out the links throughout the website.  &nbsp; &nbsp;</p>
+							  <p>I'm currently a Ph.D. student in the Geography program at Pennsylvania State University.  I'm in my third year and much of my work thinks about the geography of poverty and affluence. To see more of my research and data-related work, check out the links throughout the website.  &nbsp; &nbsp;</p>
 								<footer>
 									<ul class="actions">
 										<li><a href="about.html" class="button large">About me</a></li>
