--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- Intro -->
 							<section id="intro">
 								<header>
-									<h2>Billy Southern</h2>
+									<h2></a>Billy Southern</a></h2>
 										<section id="footer">
 								<ul class="icons">
 									<li><a href="https://twitter.com/BillySouthern6" class="icon brands fa-twitter" style="font-size:36px"><span class="label">Twitter</span></a></li>
