Updating interactive map
Updating map on Richmond spatial extent

--- a/Richmond_Spatial_Extent.html
+++ b/Richmond_Spatial_Extent.html
@@ -145,7 +145,7 @@
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Urban</strong>: Census tracts with more than 400 pre-1950 housing units per square mile<br>
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>Inner suburb</strong>: Census tracts with more than 400 1950-1970 housing units per square mile<br>
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>Outer suburb</strong>: The remaining census tracts&nbsp;<br>
-  <em> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;( <strong></strong> Cooke &amp; Marchant, 2006; Vicino, 2008)<br>
+  <em> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  <strong></strong> (Cooke &amp; Marchant, 2006; Vicino, 2008)<br>
   </em><strong class="centered-text">&nbsp; &nbsp; &nbsp; 1990  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2020&nbsp; &nbsp; &nbsp;</strong>
   </iframe>
 	<iframe src="Spatial Extent maps/BuildingDensity_map.html" width="100%" height="400px" frameborder="0" allowfullscreen></iframe></p>
@@ -196,7 +196,7 @@
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>Transit suburb</strong>: Census tracts where public transit is 50% greater than the metropolitan average<br>
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>Auto suburb</strong>: Tracts where car is the  dominant mode of transportation<br>
   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <strong>Exurb</strong>: Less than 58 persons per square mile<br>
-  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <em>&nbsp;(Gordon &amp; Janzan, 2013)<br>
+  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <em>(Gordon &amp; Janzan, 2013)<br>
   </em><strong class="centered-text">&nbsp; &nbsp; &nbsp; 1990  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 2020&nbsp; &nbsp; &nbsp;</strong>
   </iframe>
 		<iframe src="Spatial Extent maps/Travel_map.html" width="100%" height="450px" frameborder="0" allowfullscreen></iframe></p>
