Updating menu functions
Removing menus from pages

--- a/about.html
+++ b/about.html
@@ -39,9 +39,10 @@
 										<input type="text" name="query" placeholder="Search" />
 									</form>
 								</li>
+							<!-- <div> 	</li>
 								<li class="menu">
 									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
+								</li> </div> -->
 							</ul>
 						</nav>
 					</header>
@@ -141,7 +142,6 @@
 				<!-- Footer -->
 					<section id="footer">
 						<ul class="icons">
-									<li><a href="https://twitter.com/BillySouthern6" class="icon brands fa-twitter" style="font-size:36px"><span class="label">Twitter</span></a></li>
 									<li><a href="https://github.com/BillySouthern" class="icon brands fa fa-github-square" style="font-size:36px"><span class="label">Github</span></a></li>
 									<li><a href="mailto:bms6724@psu.edu" class="fa fa-envelope" style="font-size:36px"><span class="label">Send Email</span></a></li>
 									<li><a href="https://www.geog.psu.edu/directory/billy-southern" class="icon solid fas fa-graduation-cap" style="font-size:36px"><span class="label">PSU</span></a></li>
