--- a/Richmond_Spatial_Extent.html
+++ b/Richmond_Spatial_Extent.html
@@ -38,15 +38,15 @@
 									<form id="search" method="get" action="#">
 										<input type="text" name="query" placeholder="Search" />
 									</form>
-								</li>
+							<!-- <div> 	</li>
 								<li class="menu">
 									<a class="fa-bars" href="#menu">Menu</a>
-								</li>
+								</li> </div> -->
 							</ul>
 						</nav>
-					</header>
+					</header>  
 
-				<!-- Menu -->
+				<!-- <div> <!-- Menu -->
 					<section id="menu">
 
 						<!-- Search -->
